Form.IO Test App

--- a/src/app/main/main.template.html
+++ b/src/app/main/main.template.html
@@ -69,9 +69,9 @@
 
 // JavaScript $scope.example1model = [];
 $scope.example1data = [
-  {id: 1, label: "David"},
-  {id: 2, label: "Jhon"},
-  {id: 3, label: "Danny"}
+  {id: admins, label: "Administrators"},
+  {id: authors, label: "Authors"},
+  {id: consumers, label: "Consumers"}
 ];
 					</div>
 				</div>
