--- a/src/app/main/main.template.html
+++ b/src/app/main/main.template.html
@@ -69,9 +69,9 @@
 
 // JavaScript $scope.example1model = [];
 $scope.example1data = [
-  {id: admins, label: "Administrators"},
-  {id: authors, label: "Authors"},
-  {id: consumers, label: "Consumers"}
+{ role_id: admins, role: 'Administrators', role_description: 'Can Manage Content and Users', created_date: '2020-02-19T23:54:28.130Z' },
+{ role_id: authors, role: 'Authors', role_description: '', created_date: '2020-02-19T23:54:28.204Z' },
+{ role_id: consumers, role: 'Consumers', role_description: 'Can Execute Reports and Dashboards', created_date: '2020-02-19T23:54:28.130Z' },
 ];
 					</div>
 				</div>
